# restaurant_marketing_agent

./: .replit  api.py  deployment.md  plan_send_drafts_2_email.md  pyproject.toml  requirements.txt  send_drafts_to_email.py  specs.md  write_post.py
integrations/google/: dump_creds_to_json_string.py  email_manager.py  google_api_core.py
