[tool.poetry]
name = "restaurant-marketing-agent"
version = "0.1.0"
description = "Automated AI agent for restaurant marketing"
authors = ["Mark Torres <markptorres1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
openai = "^1.35.1"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
certifi = "^2024.7.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn api:app --host 0.0.0.0 --port 8000"

